# robot-emulator

./: CMakeLists.txt  README.md
cmake/: GoogleTestAddTests.cmake  gfai.cmake  macros.cmake
src/: client_main.cpp  main.cpp  server_main.cpp  signal_handler.hpp
src/environment/: component.hpp  environment.cpp  environment.hpp
src/network/: client.cpp  client.hpp  crc_hash.hpp  public_server.cpp  public_server.hpp  socket.cpp  socket.hpp  udp_socket.cpp  udp_socket.hpp
src/recorder/: record_entry.cpp  record_entry.hpp  record_server.cpp  record_server.hpp  recorder.cpp  recorder.hpp
src/type_traits/: type_traits.hpp
